manifests/ray-cluster/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ray-cluster
  labels:
    istio-injection : enabled
